Next Release
============

* ENH: New FSL interface: EpiReg
* ENH: New Freesurfer interface: Tkregister2 (for conversion of fsl style matrices to freesurfer format)
* ENH: New FSL interfaces: WarpPoints, WarpPointsToStd.
* ENH: New Freesurfer interface: MRIPretess
* ENH: New miscelaneous interface: AddCSVRow
* ENH: FUGUE interface has been refactored to use the name_template system, 3 examples 
       added to doctests, some bugs solved.
* ENH: Added new interfaces (fsl.utils.WarpUtils, ConvertWarp) to fnirtfileutils and convertwarp
* API: Interfaces to external packages are no longer available in the top-level
       ``nipype`` namespace, and must be imported directly (e.g.
       ``from nipype.interfaces import fsl``).
* ENH: New FSL interface: ProbTrackX2
* ENH: New misc algorithm: NormalizeProbabilityMapSet
* ENH: Support for elastix via a set of new interfaces: Registration, ApplyWarp, 
       AnalyzeWarp, PointsWarp, and EditTransform
* ENH: New ANTs interface: ApplyTransformsToPoints
* ENH: New metrics group in algorithms. Now Distance, Overlap, and FuzzyOverlap
       are found in nipype.algorithms.metrics instead of misc
* ENH: New interface in algorithms.metrics: ErrorMap (a voxel-wise diff map).
* ENH: New FreeSurfer workflow: create_skullstripped_recon_flow()
* ENH: New data grabbing interface that works over SSH connections, SSHDataGrabber
* ENH: New color mode for write_graph
* ENH: You can now force MapNodes to be run serially
* ENH: New ANTs interface: LaplacianThickness
* FIX: MRTrix tracking algorithms were ignoring mask parameters.
* FIX: FNIRT registration pathway and associated OpenFMRI example script
* FIX: spm12b compatibility for Model estimate
* FIX: Batch scheduler controls the number of maximum jobs properly
* FIX: Update for FSL 5.0.7 which deprecated Contrast Manager
* ENH: Added ANTS based openfmri workflow

Release 0.9.2 (January 31, 2014)
============

* FIX: DataFinder was broken due to a typo