@@ -43,8 +43,10 @@ def test_FilterTracks_inputs():
     ),
     no_mask_interpolation=dict(argstr='-nomaskinterp',
     ),
-    out_filename=dict(argstr='%s',
-    genfile=True,
+    out_file=dict(argstr='%s',
+    hash_files=False,
+    name_source=['in_file'],
+    name_template='%s_filt',
     position=-1,
     ),
     quiet=dict(argstr='-quiet',
