@@ -1,6 +1,8 @@
 Next Release
 ============
 
+* ENH: New Diffusion Toolkit interface: TrackMerge
+* ENH: New MRtrix interface: FilterTracks
 * ENH: New FSL interface: EpiReg
 * ENH: New Freesurfer interface: Tkregister2 (for conversion of fsl style matrices to freesurfer format)
 * ENH: New FSL interfaces: WarpPoints, WarpPointsToStd.
